# ACT-Break

./: .gitignore  README.md  colab_notebook.ipynb  colab_notebook_karakumru.ipynb  colab_runner.py  config.py  pyproject.toml
colab/: colab_notebook.ipynb  colab_notebook_karakumru.ipynb
data/: download_advbench.py  harmful_prompts_tr.csv  translate_advbench_tr.py
scratch/: benchmark_gcg.py  benchmark_model_load.py  inspect_activations.py
scripts/: 00_check_model_config.py  01_collect_activations.py  02_train_probe.py  03_extract_direction.py  04_steering_validation.py  05_optimize_suffix.py  06_multi_stage_validation.py  audit_turkish_pipeline.py
src/: __init__.py  activation_collector.py  activation_measurements.py  activation_reference.py  activation_steering.py  behavior_scoring.py  direction_extractor.py  gcg_optimizer.py  loss_functions.py  model_loader.py  probe_trainer.py  text_utils.py  token_gradients.py  validation.py
tests/: test_behavior_scoring.py  test_gcg_optimizer_helpers.py
