[project]
name = "act-break"
version = "0.1.0"
description = "White-box jailbreak direction analysis framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4,<2.7",
    "transformers>=4.40.0,<4.56.0",
    "safetensors>=0.4.0",
    "datasets>=2.18.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "accelerate>=0.30.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
